// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/sbt/extract extractPackageFile() extract deps from native scala file with private variables 1`] = `
{
  "deps": [
    {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "editFile": "build.sbt",
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "localVars": {
    "abcVersion": {
      "lineIndex": 7,
      "sourceFile": "build.sbt",
      "val": "1.2.3",
    },
  },
  "packageFile": "build.sbt",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
  ],
  "scalaVersion": "2.13.0-RC5",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extract deps from native scala file with variables 1`] = `
{
  "deps": [
    {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "editFile": "build.sbt",
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-a",
      "editFile": "build.sbt",
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-a",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-b",
      "editFile": "build.sbt",
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-b",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-c",
      "editFile": "build.sbt",
      "fileReplacePosition": 7,
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-c",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "localVars": {
    "abcVersion": {
      "lineIndex": 7,
      "sourceFile": "build.sbt",
      "val": "1.2.3",
    },
  },
  "packageFile": "build.sbt",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
  ],
  "scalaVersion": "2.13.0-RC5",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps for generic use-cases 1`] = `
{
  "deps": [
    {
      "currentValue": "2.9.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "packageName": "org.example:foo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "packageName": "org.example:baz_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "packageName": "org.example:qux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "2.13.3",
      "datasource": "sbt-package",
      "depName": "org.scala-lang:scala-library",
      "depType": "sources",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "packageName": "org.example:quux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "packageName": "org.example:quuz_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.42",
      "datasource": "sbt-package",
      "depName": "org.example:abc",
      "depType": "test",
      "packageName": "org.example:abc_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "packageName": "org.example:corge",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "editFile": "build.sbt",
      "fileReplacePosition": 17,
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "packageName": "org.example:waldo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://repo.scala-sbt.org/scalasbt/sbt-plugin-releases",
      ],
    },
    {
      "currentValue": "(,8.4.0]",
      "datasource": "sbt-package",
      "depName": "org.example:fred",
      "packageName": "org.example:fred",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
  "localVars": {
    "artifactIdExample": {
      "lineIndex": 16,
      "sourceFile": "build.sbt",
      "val": "corge",
    },
    "groupIdExample": {
      "lineIndex": 15,
      "sourceFile": "build.sbt",
      "val": "org.example",
    },
    "versionExample": {
      "lineIndex": 17,
      "sourceFile": "build.sbt",
      "val": "0.0.8",
    },
  },
  "packageFile": "build.sbt",
  "packageFileVersion": "1.0",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
    "https://example.com/repos/1/",
    "https://example.com/repos/2/",
    "https://example.com/repos/3/",
    "https://example.com/repos/4/",
    "https://example.com/repos/5/",
  ],
  "scalaVersion": "2.9.10",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "packageName": "org.example:foo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "packageName": "org.example:baz_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "packageName": "org.example:qux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "packageName": "org.example:quux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "packageName": "org.example:quuz_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "packageName": "org.example:corge",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "editFile": "build.sbt",
      "fileReplacePosition": 1,
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "packageName": "org.example:waldo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://repo.scala-sbt.org/scalasbt/sbt-plugin-releases",
      ],
    },
  ],
  "localVars": {
    "ScalaVersion": {
      "lineIndex": 0,
      "sourceFile": "build.sbt",
      "val": "2.12.10",
    },
    "artifactIdExample": {
      "lineIndex": 18,
      "sourceFile": "build.sbt",
      "val": "corge",
    },
    "groupIdExample": {
      "lineIndex": 17,
      "sourceFile": "build.sbt",
      "val": "org.example",
    },
    "versionExample": {
      "lineIndex": 1,
      "sourceFile": "build.sbt",
      "val": "0.0.8",
    },
  },
  "packageFile": "build.sbt",
  "packageFileVersion": "3.2.1",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
    "https://example.com/repos/1/",
    "https://example.com/repos/2/",
    "https://example.com/repos/3/",
    "https://example.com/repos/4/",
    "https://example.com/repos/5/",
  ],
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable with ThisBuild scope 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "localVars": {
    "ScalaVersion": {
      "lineIndex": 1,
      "sourceFile": "build.sbt",
      "val": "2.12.10",
    },
  },
  "packageFile": "build.sbt",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
  ],
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable with a trailing comma 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "localVars": {
    "ScalaVersion": {
      "lineIndex": 1,
      "sourceFile": "build.sbt",
      "val": "2.12.10",
    },
  },
  "packageFile": "build.sbt",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
  ],
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined with ThisBuild scope 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "localVars": {},
  "packageFile": "build.sbt",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
  ],
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined with a trailing comma 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "localVars": {},
  "packageFile": "build.sbt",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
  ],
  "scalaVersion": "2.12",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() returns null for empty 1`] = `
{
  "deps": [],
  "localVars": {},
  "packageFile": "build.sbt",
  "packageFileVersion": "1.2.3",
  "registryUrls": [
    "https://repo.maven.apache.org/maven2",
  ],
  "scalaVersion": undefined,
}
`;
